# music_player

./: .fvmrc  .gitignore  CLAUDE.md  LICENSE  README.md  analysis_options.yaml  build.yaml  bump_version.sh  flutter_launcher_icons.yaml  flutter_native_splash.yaml  l10n.yaml  privacy-policy.md  pubspec.yaml  push_music.sh
.github/workflows/: android.yml
android/: gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
lib/: main.dart  music_player.dart
lib/common/: animated_card.dart  animated_overflow_text.dart  common.dart  control_buttons.dart  player_button.dart  toast.dart
lib/data/: audio_session_state.dart  custom_action_mode.dart  playlist.dart  song.dart  sort_options.dart  theme_keys.dart
lib/l10n/: app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_it.arb  app_ja.arb  app_ko.arb  app_pt.arb  app_ru.arb  app_zh.arb
lib/low_level_wrapper/: init.dart
lib/menu/: nav_bar.dart
lib/pages/: after_splash.dart  error_page.dart  favourites.dart  loading_page.dart  playlists.dart  search.dart  settings.dart  (+2 more)
rust/: Cargo.toml  README.md
rust/benches/: hash_benchmarks.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: mod.rs  music_folder.rs  playlist_collection.rs  process_music.rs  song_collection.rs
rust/src/api/data/: mod.rs  music_index.rs  playlist.rs  song.rs  stream_event.rs
rust/src/api/error/: custom_error.rs
rust/src/api/utils/: database_ops.rs  hash.rs  logger.rs  mod.rs  sort_modes.rs
rust/tests/: integration_music_index.rs  music_folder_scan.rs
rust_builder/: pubspec.yaml
test/: widget_test.dart
(+108 files in other folders)
