[package]
name = "rust_lib_music_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
dirs = "6.0.0"
flutter_rust_bridge = "=2.11.1"
lofty = "0.22.4"
serde = "1.0.228"
serde_json = "1.0.145"
sled = "0.34.7"
symphonia = "0.5.5"
xxhash-rust = "0.8.15"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
