[package]
name = "rust_lib_music_player"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
dirs = "6.0.0"
flutter_rust_bridge = "=2.11.1"
lofty = { version = "0.22.4" }
once_cell = "1.21.3"
rand = "0.9.2"
thiserror="2.0.17"
bincode = { version = "2", features = ["serde", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
sled = "0.34.7"
symphonia = "0.5.5"
xxhash-rust = { version = "0.8.15", features = ["xxh64"] }
tokio = "1.48.0"
tokio-stream = "0.1.17"
futures = "0.3.31"
log = "0.4.28"
android_logger = "0.15.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
